@@ -1,3 +1,7 @@
+2023-09-19  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated Numista data source to fetch more than 20 results.
+
 2023-08-02  Robby Stephenson  <robby@periapsis.org>
 
 	* Removed "Tip of the Day" dialog.
